// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelListMessenger by default, children should be rendered 1`] = `
<div
  className="str-chat__channel-list-messenger"
>
  <div
    className="str-chat__channel-list-messenger__main"
  >
    <div>
      children 1
    </div>
    <div>
      children 2
    </div>
  </div>
</div>
`;

exports[`ChannelListMessenger when \`error\` prop is true, \`LoadingErrorIndicator\` should be rendered 1`] = `
<div>
  Loading Error Indicator
</div>
`;

exports[`ChannelListMessenger when \`loading\` prop is true, \`LoadingIndicator\` should be rendered 1`] = `
<div>
  Loading Indicator
</div>
`;
